# sofar_hbc_01

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: blocks_param.yaml  console.config
docs/: _block2_pick_8srv.html  _block2_pick_8srv_source.html  _block_8cpp.html  _block_8cpp__incl.map  _block_8cpp__incl.md5  _block_8cpp_source.html  _block_8h.html  _block_8h__dep__incl.map  _block_8h__dep__incl.md5  _block_8h__incl.map  _block_8h__incl.md5  _block_8h_source.html  _blocks_poses_8srv.html  _blocks_poses_8srv_source.html  _c_make_lists_8txt.html  _closest_empty_space_8srv.html  _closest_empty_space_8srv_source.html  _collision_detection_result_8srv.html  _collision_detection_result_8srv_source.html  _collision_detection_toggle_8srv.html  _collision_detection_toggle_8srv_source.html  _f_s_m_8cpp.html  _f_s_m_8cpp__incl.map  _f_s_m_8cpp__incl.md5  _f_s_m_8cpp_source.html  _f_s_m_8h.html  _f_s_m_8h__dep__incl.map  _f_s_m_8h__dep__incl.md5  _f_s_m_8h__incl.map  _f_s_m_8h__incl.md5  _f_s_m_8h_source.html  _link_8cpp.html  _link_8cpp__incl.map  _link_8cpp__incl.md5  _link_8cpp_source.html  _link_8h.html  _link_8h__dep__incl.map  _link_8h__dep__incl.md5  _link_8h__incl.map  _link_8h__incl.md5  (+99 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  functions_0.js  functions_1.js  (+32 more)
include/sofar_hbc_01/: Block.h  FSM.h  Link.h  utils.h
launch/: joint_trajectory_client.launch  lab_sofar_hbc_01.launch  sofar_hbc_01.launch
rviz/: debug_config.rviz
scripts/: joint_trajectory_client.py
src/: Block.cpp  FSM.cpp  Link.cpp  blocks_server.cpp  checkboard_empty_pos_server.cpp  closest_block.cpp  collision_detection.cpp  finite_state_machine.cpp  finite_state_machine_class.cpp  gripper_routing.cpp  start_baxter_routine.cpp  tf_server.cpp  tmp_empty_pos_server.cpp  tmp_empty_pos_server1.cpp  utils.cpp
srv/: Block2Pick.srv  BlocksPoses.srv  ClosestEmptySpace.srv  CollisionDetectionResult.srv  CollisionDetectionToggle.srv
test/: fcl_test.cpp
urdf/: human.urdf.xacro
